data/forge_javadoc/1.8.9/raw/net/minecraft/client/model/ModelQuadruped.md
---
title: "ModelQuadruped"
description: "public class ModelQuadruped extends ModelBase"
package: "net/minecraft/client/model"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/model/ModelQuadruped.html"
sourceType: javadoc
---

# ModelQuadruped

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelQuadruped

## Class signature

```java
public class ModelQuadruped extends ModelBase
```

## Constructors

- `ModelQuadruped(int p_i1154_1_, float p_i1154_2_)`

## Methods

- `void render(Entity entityIn, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float scale)` — Sets the models various rotation angles then renders the model.
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity entityIn)` — Sets the model's various rotation angles.

## Fields

- `ModelRenderer body`
- `protected float childYOffset`
- `protected float childZOffset`
- `ModelRenderer head`
- `ModelRenderer leg1`
- `ModelRenderer leg2`
- `ModelRenderer leg3`
- `ModelRenderer leg4`
